--- a/app/Resources/views/Main/project.html.twig
+++ b/app/Resources/views/Main/project.html.twig
@@ -3,5 +3,5 @@
 {% block title %}BlogBundle:Main:projet{% endblock %}
 
 {% block body %}
-<h1>Welcome to the Main:contact page</h1>
+<h1>Welcome to the Main:Projet page</h1>
 {% endblock %}
