--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -48,12 +48,14 @@
         </div>
     </header>
         {%  endblock %}
+
         {% block body %}{% endblock %}
+
         {% block javascripts %}
-            <script src="{{ asset('css/main.js') }}" ></script>
             <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
             <!-- Compiled and minified Materialize JavaScript -->
             <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
+            <script type="text/javascript" src="{{ asset('js/main.js') }}" ></script>
 
         {% endblock %}
     </body>
