--- a/app/Resources/views/Main/logbook.html.twig
+++ b/app/Resources/views/Main/logbook.html.twig
@@ -49,7 +49,7 @@
                     {% if logbook.title != "Objectifs" %}
                         <li class="logbook_article">
                             <div class="collapsible-header">
-                                <h3><small>{{ logbook.title }}</small></h3>
+                                <h3><small>{{ logbook.date | date("d/m") }} - {{ logbook.title }}</small></h3>
                             </div>
                             <div class="collapsible-body">
                                 {%  if logbook.other %}
