--- a/web/css/main.css
+++ b/web/css/main.css
@@ -106,7 +106,7 @@ img {
 
 .home_bloc_tile {
     height: 25vh;
-    margin-top: 5vh;
+    margin-top: 7.5vh;
  /**   border-bottom: 1px solid #006600;
     border-left: 1px solid #006600;
     box-shadow: 2px 2px 0 0 #009900; **/
@@ -127,4 +127,27 @@ img {
     height: 32px;
     width: 32px;
     margin:0 8px 0 8px;
+}
+
+.construction {
+    height: 32px;
+    width: 32px;
+}
+
+#logdate {
+    margin-top: -5.25vh;
+}
+
+
+#maillink {
+    cursor:pointer;
+    color: #039be5;
+}
+#mailelem {
+    display:none;
+}
+
+#mailelem img {
+    height: 20px;
+    width: 20px;
 }
