--- a/web/css/main.css
+++ b/web/css/main.css
@@ -37,6 +37,7 @@ ul {
 
 body {
     text-align:center;
+    background-image: url('../img/background-greyzz.png');
 }
 
 header {
@@ -150,4 +151,12 @@ img {
 #mailelem img {
     height: 20px;
     width: 20px;
+}
+
+#winning_star {
+
+}
+
+.collapsible-body p {
+    text-align:justify;
 }
