Doing some testing on navbar and button to use mzterialize elements instead of doing them on my own.

--- a/app/Resources/views/Main/index.html.twig
+++ b/app/Resources/views/Main/index.html.twig
@@ -35,7 +35,7 @@
             <div class="col offset-s1 s10 offset-m2 m4 offset-l1 l2 home_bloc_tile hoverable">
                 <img src="{{ asset('/img/settings-black.png')}}" alt="projets">
                 <h2>Projets</h2>
-                <p>Ce que j'ai fait.<br>Ce que je suis en train de faire.<br>Ce que je ferai.</p>
+                <p>"Stack technique" perso.<br>Mes réalisations.</p>
                 <div class="bl_sp_xs"></div>
                 <img src="{{ asset('/img/construction.png')}}" alt="section en construction" class="construction">
             </div>
