--- a/web/css/main.css
+++ b/web/css/main.css
@@ -40,14 +40,6 @@ body {
     background-image: url('../img/background-greyzz.png');
 }
 
-header {
-    height: 10vh;
-}
-
-header img {
-    margin-top:1vh;
-}
-
 .disable{
     pointer-events: none;
     opacity: 0.35;
@@ -95,11 +87,7 @@ img {
 }
 
 #logbook_obj {
-}
 
-#navbar {
-    box-shadow: 2px 2px 2px 0 #009900;
-    height: auto;
 }
 
 .home_bloc_btn {
@@ -163,4 +151,36 @@ img {
 
 .floating img {
     margin-top: -15px;
+}
+
+.fixed-action-btn img {
+    width: 28px;
+    height: 28px;
+    margin: 6px;
+}
+
+.btn-large img {
+    width: 50px;
+    height: 50px;
+    margin: 3px;
+}
+
+.fixed-action-btn {
+    top: 32px;
+
+
+}
+
+#project_main ul {
+}
+
+#project_main li {
+}
+
+.project-tile li {
+
+}
+
+.card-action div {
+    display: inline;
 }
