--- a/app/Resources/views/Main/project.html.twig
+++ b/app/Resources/views/Main/project.html.twig
@@ -15,60 +15,72 @@
     </div>
     <div class=container">
         <div class="row project-tile">
-            <div class="col s12 offset-m1 m5">
-                <div class="card lime darken-1 z-depth-2">
-                    <div class="card-content white-text">
-                        <span class="card-title">JavaScript</span>
-                        <ul>
-                            <li>Site réalisé avec jQuery.</li>
-                            <li>Si je dois partir sur une nouvelle techno JS front, ce serait React.</li>
-                        </ul>
-                    </div>
-                    <div class="card-action">
-                        <a href="#" class="green-text text-darken-4">This is a link</a>
-                        <a href="#" class="green-text text-darken-4">This is a link</a>
-                    </div>
-                </div>
+            <div class="col offset-s1 s10 offset-m1 m5">
                 <div class="card light-green z-depth-4">
                     <div class="card-content white-text">
-                        <span class="card-title">Back office</span>
+                        <span class="card-title"><strong>PHP</strong></span>
                         <ul>
-                            <li>Php & Symfony 2 : En formation @WildCodeSchool.</li>
-                            <li>Site réalisé avec.</li>
-                            <li>A choisir, ma prochaine techno back serait nodejs.</li>
+                            <li>Site réalisé avec <strong>Symfony 2</strong>.</li>
+                            <li>En formation sur ce framework <strong>@WildCodeSchool</strong>.</li>
                         </ul>
-
                     </div>
                     <div class="card-action">
-                        <a href="#" class="green-text text-darken-4">Wild Code School</a>
+                        <a href="http://www.wildcodeschool.fr/" class="green-text text-darken-4">Wild Code School</a>
+                        <a href="https://symfony.com" target="_blank" class="green-text text-darken-4">Symfony</a>
+                    </div>
+                </div>
+
+                <div class="card green lighten-2 z-depth-4">
+                    <div class="card-content white-text ">
+                        <span class="card-title"><strong>CSS</strong></span>
+                        <ul>
+                            <li>Site réalisé en <strong>Materializecss</strong>.</li>
+                            <li>Je travaille sur <strong>Bootstrap</strong>.</li>
+                            <li>J'hésite entre <strong>Foundation</strong> et du CSS sans framework pour mon prochain projet.</li>
+                        </ul>
+                    </div>
+                    <div class="card-action">
+                        <a href="http://materializecss.com/" class="green-text text-darken-4">Materialize</a>
+                        <a href="http://getbootstrap.com/" class="green-text text-darken-4">Bootstrap</a>
+                        <a href="http://foundation.zurb.com/" class="green-text text-darken-4">Foundation</a>
+
                     </div>
                 </div>
             </div>
-            <div class="col s12 m5">
-                <div class="card green lighten-2 z-depth-2">
-                    <div class="card-content white-text ">
-                        <span class="card-title">CSS</span>
+            <div class="col offset-s1 s10 m5">
+                <div class="card lime darken-1 z-depth-4">
+                    <div class="card-content white-text">
+                        <span class="card-title"><strong>JavaScript</strong></span>
                         <ul>
-                            <li>Site réalisé en Materializecss.</li>
-                            <li>Je travaille sur Bootstrap.</li>
-                            <li>J'hésite entre Foundation et du CSS sans framework pour mon prochain projet.</li>
+                            <li>Site réalisé avec <strong>jQuery</strong>, librairie avec laquelle je travaille.</li>
+                            <li>J'ai testé rapidement <strong>AngularJS</strong>.</li>
+                            <li>Si je dois partir sur une nouvelle techno JS front, ce serait <strong>ReactJS</strong>.</li>
+                            <li>Ma prochaine techno back sera probablement <strong>NodeJS</strong>.</li>
                         </ul>
                     </div>
                     <div class="card-action">
-                        <a href="#" class="green-text text-darken-4">Materialize</a>
-                        <a href="#" class="green-text text-darken-4">Bootstrap</a>
-                        <a href="#" class="green-text text-darken-4">Fondation</a>
-
+                        <a href="https://jquery.com/" class="green-text text-darken-4">jQuery</a>
+                        <a href="https://angularjs.org/" class="green-text text-darken-4">AngularJS</a>
                     </div>
                 </div>
-                <div class="card green accent-4 z-depth-3">
+                <div class="card green accent-4 z-depth-4">
                     <div class="card-content white-text">
                             <span class="card-title">
-                                    Site hebergé sur un VPS 1&1
+                                    Site hebergé sur un <strong>VPS</strong> 1&1
                             </span>
                     </div>
                     <div class="card-action">
-                        <a href="#" class="green-text text-darken-4">1&1</a>
+                        <a href="https://www.1and1.fr" class="green-text text-darken-4">1&1</a>
+                    </div>
+                </div>
+                <div class="card green accent-2 z-depth-4">
+                    <div class="card-content white-text">
+                        <p>
+                            <strong>
+                            Je travaille principalement avec PHP Storm et un peu de SublimeText.
+                            </strong>
+                        </p>
+
                     </div>
                 </div>
             </div>
