--- a/app/Resources/views/Main/index.html.twig
+++ b/app/Resources/views/Main/index.html.twig
@@ -17,9 +17,7 @@
             <div class="col offset-s1 s10 offset-m2 m4 offset-l2 l2 home_bloc_tile hoverable">
                 <img src="{{ asset('/img/profile-black.png')}}" alt="profil">
                 <h2>Profil</h2>
-                <p>Ma page de présentation générale.<br>Mon parcours, mes attentes, mes envies.</p>
-                <div class="bl_sp_xs"></div>
-                <img src="{{ asset('/img/construction.png')}}" alt="section en construction" class="construction">
+                <p>Présentation.<br>Mon parcours, mes attentes, mes envies.</p>
             </div>
         </a>
 
@@ -58,7 +56,7 @@
         </div>
 
         <div class="col offset-s1 s10 offset-m2 m4 offset-l1 l2 home_bloc_tile hoverable">
-            <img src="{{ asset('/img/social-black.png')}}" alt="logbook">
+            <img src="{{ asset('/img/social-black.png')}}" alt="social">
             <h2>Contact</h2>
             <p><span id="maillink">Me contacter</span><span id="mailelem">{{ mail }} <a href="mailto:alex.fradet.1@gmail.com"><img src="{{ asset('/img/mail-black.png')}}"/></a></span><br>
                 Me retrouver sur le web :</p>
